--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -231,6 +231,10 @@
     <Compile Include="AgricultureContextMigrations\202301030444521_Agriculture_PRawMaterialNew.Designer.cs">
       <DependentUpon>202301030444521_Agriculture_PRawMaterialNew.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202301071041456_Yearly_Target.cs" />
+    <Compile Include="AgricultureContextMigrations\202301071041456_Yearly_Target.Designer.cs">
+      <DependentUpon>202301071041456_Yearly_Target.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -387,6 +391,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202301030444521_Agriculture_PRawMaterialNew.resx">
       <DependentUpon>202301030444521_Agriculture_PRawMaterialNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202301071041456_Yearly_Target.resx">
+      <DependentUpon>202301071041456_Yearly_Target.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
