--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3649,7 +3649,11 @@
     <Content Include="Views\AgroConfiguration\_GetPackageRMStockList.cshtml" />
     <Content Include="Views\AgroConfiguration\DailySalesReportList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetDailySalesReportList.cshtml" />
+
     <Content Include="Views\AgroConfiguration\YearlyTargetList.cshtml" />
+
+    <Content Include="Views\AgroConfiguration\_GetRawMaterialMainPriceView.cshtml" />
+
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
