--- a/ERPWeb/Web.config
+++ b/ERPWeb/Web.config
@@ -99,26 +99,20 @@
     <add name="Configuration" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=Configuration;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="SalesAndDistribution" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=SalesAndDistribution;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="Accounts" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=Accounts;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    
+    
+    
+    
+    
     <!--Live PC Connection-->
-    <add name="ControlPanel" connectionString="Data Source=103.108.140.210; Initial Catalog=ControlPanelAgro; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
-    <add name="Agriculture" connectionString="Data Source=103.108.140.210; Initial Catalog=Agriculture; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
-    <!--<add name="Inventory" connectionString="Data Source=103.108.140.210; Initial Catalog=Inventory; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Production" connectionString="Data Source=103.108.140.210; Initial Catalog=Production; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="FrontDesk" connectionString="Data Source=103.108.140.210; Initial Catalog=FrontDesk; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Configuration" connectionString="Data Source=103.108.140.210; Initial Catalog=Configuration; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="SalesAndDistribution" connectionString="Data Source=103.108.140.210; Initial Catalog=SalesAndDistribution; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Accounts" connectionString="Data Source=103.108.140.210; Initial Catalog=Accounts; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <!--5 Star Server-->
-    <!--<add name="ControlPanel" connectionString="Data Source=5STAR-SERVER\SQLEXPRESS; Initial Catalog=ControlPanel; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Inventory" connectionString="Data Source=5STAR-SERVER\SQLEXPRESS; Initial Catalog=Inventory; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Production" connectionString="Data Source=5STAR-SERVER\SQLEXPRESS; Initial Catalog=Production; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <!--<add name="ControlPanel" connectionString="Data Source=203.83.162.66; Initial Catalog=ControlPanel; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Inventory" connectionString="Data Source=203.83.162.66; Initial Catalog=Inventory; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Production" connectionString="Data Source=203.83.162.66; Initial Catalog=Production; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="FrontDesk" connectionString="Data Source=203.83.162.66; Initial Catalog=FrontDesk; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Configuration" connectionString="Data Source=203.83.162.66; Initial Catalog=Configuration; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="SalesAndDistribution" connectionString="Data Source=203.83.162.66; Initial Catalog=SalesAndDistribution; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="Accounts" connectionString="Data Source=203.83.162.66; Initial Catalog=Accounts; Integrated Security =false; User ID=admin;Password=5$t@r$erveR@2k22*;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ControlPanel" connectionString="Data Source=103.108.140.210; Initial Catalog=ControlPanelAgro; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    <add name="Agriculture" connectionString="Data Source=103.108.140.210; Initial Catalog=Agriculture; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>-->
+    
+  
+    <add name="ControlPanel" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanelAgro; Integrated Security =true; Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    
+    <add name="Agriculture" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS; Initial Catalog=Agriculture; Integrated Security =true;Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
