--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -235,6 +235,10 @@
     <Compile Include="AgricultureContextMigrations\202301071041456_Yearly_Target.Designer.cs">
       <DependentUpon>202301071041456_Yearly_Target.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202301080958005_ProductionCostfind.cs" />
+    <Compile Include="AgricultureContextMigrations\202301080958005_ProductionCostfind.Designer.cs">
+      <DependentUpon>202301080958005_ProductionCostfind.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -394,6 +398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202301071041456_Yearly_Target.resx">
       <DependentUpon>202301071041456_Yearly_Target.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202301080958005_ProductionCostfind.resx">
+      <DependentUpon>202301080958005_ProductionCostfind.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
