--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -227,9 +227,14 @@
     <Compile Include="AgricultureContextMigrations\202301080958005_ProductionCostfind.Designer.cs">
       <DependentUpon>202301080958005_ProductionCostfind.cs</DependentUpon>
     </Compile>
+
     <Compile Include="AgricultureContextMigrations\202301100812102_Payment Status.cs" />
     <Compile Include="AgricultureContextMigrations\202301100812102_Payment Status.Designer.cs">
       <DependentUpon>202301100812102_Payment Status.cs</DependentUpon>
+ </Compile>
+    <Compile Include="AgricultureContextMigrations\202301081104149_Agriculture_Depo.cs" />
+    <Compile Include="AgricultureContextMigrations\202301081104149_Agriculture_Depo.Designer.cs">
+      <DependentUpon>202301081104149_Agriculture_Depo.cs</DependentUpon>
     </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
@@ -385,8 +390,13 @@
     <EmbeddedResource Include="AgricultureContextMigrations\202301080958005_ProductionCostfind.resx">
       <DependentUpon>202301080958005_ProductionCostfind.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="AgricultureContextMigrations\202301100812102_Payment Status.resx">
       <DependentUpon>202301100812102_Payment Status.cs</DependentUpon>
+</EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202301081104149_Agriculture_Depo.resx">
+      <DependentUpon>202301081104149_Agriculture_Depo.cs</DependentUpon>
+
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
