--- a/ERPWeb/Web.config
+++ b/ERPWeb/Web.config
@@ -105,6 +105,7 @@
     
     
     <!--Live PC Connection-->
+    
     <add name="ControlPanel" connectionString="Data Source=103.108.140.210; Initial Catalog=ControlPanelAgro; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
     <add name="Agriculture" connectionString="Data Source=103.108.140.210; Initial Catalog=Agriculture; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
     
@@ -113,6 +114,11 @@
     <!--<add name="ControlPanel" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanelAgro; Integrated Security =true; Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>-->
     
     <!--<add name="Agriculture" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS; Initial Catalog=Agriculture; Integrated Security =true;Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>-->
+
+    <!--<add name="ControlPanel" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanelAgro; Integrated Security =true; Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    
+    <add name="Agriculture" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS; Initial Catalog=Agriculture; Integrated Security =true;Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>-->
+
 
     <!--<add name="ControlPanel" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanelAgro; Integrated Security =true; Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
     
